[FIX] Spacing on homepage

--- a/resources/assets/less/pages/home.less
+++ b/resources/assets/less/pages/home.less
@@ -83,7 +83,6 @@
 
 .home-container{
 	overflow: hidden;
-	margin-top:-20px;
 }
 
 .left-container,
